--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "bunyan-format": "^0.2.1",
     "fs": "0.0.2",
     "jsdom": "^5.6.0",
+    "lodash": "^3.10.0",
+    "moment": "^2.10.3",
     "mongodb": "^2.0.36",
     "mongoose": "^4.0.6",
     "node-phantom-simple": "^1.2.0",
     "redis": "^0.12.1",
+    "request": "^2.58.0",
     "sync": "^0.2.5"
   }
 }
