--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^2.0.36",
     "mongoose": "^4.0.6",
     "node-phantom-simple": "^1.2.0",
+    "promise": "^7.0.3",
     "redis": "^0.12.1",
     "request": "^2.58.0",
     "sync": "^0.2.5"
