--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bunyan": "^1.4.0",
     "bunyan-format": "^0.2.1",
     "cheerio": "^0.19.0",
+    "cluster-hub": "^0.1.1",
     "encoding": "^0.1.11",
     "forever-monitor": "^1.6.0",
     "lodash": "^3.10.1",
