--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cheerio": "^0.19.0",
     "cluster-hub": "^0.1.1",
     "encoding": "^0.1.11",
+    "etag": "^1.7.0",
     "forever-monitor": "^1.6.0",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
