--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "promise": "^7.0.4",
     "redis": "^0.12.1",
     "request": "^2.60.0",
-    "sync": "^0.2.5"
+    "sync": "^0.2.5",
+    "xml2js": "^0.4.12"
   }
 }
