--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.10.6",
     "mongodb": "^2.0.39",
     "mongoose": "^4.1.1",
+    "needle": "^0.10.0",
     "node-phantom-simple": "^2.0.2",
     "node-xml-lite": "0.0.6",
     "optimist": "^0.6.1",
