--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cluster-hub": "^0.1.1",
     "encoding": "^0.1.11",
     "etag": "^1.7.0",
-    "execSync": "^1.0.2",
+    "exec-sync": "*",
     "forever-monitor": "^1.6.0",
     "grunt": "^0.4.5",
     "iconv-lite": "^0.4.11",
